--- a/elearning_stages/views/stage_view.xml
+++ b/elearning_stages/views/stage_view.xml
@@ -22,20 +22,21 @@
 			<field name="model">elearning.stage</field>
 			<field name="arch" type="xml">
 			<form>
-				<sheet>
+				 <sheet>
 					<group name="group_top">
 						<group name="group_left">
 							<field name="name" required="True" />
-							<field name="description" />
-							<!--<field name="stage" widget="statusbar" />
-							
-									 <group name="group_right">
-						<field name="active" readonly="1" />
-						</group> -->
-						<!--<field name="is_done" />-->
-						</group>
+							<field name="description" />											
+                            <!-- 
+                            <field name="stage" widget="statusbar" />   
+                            <group name="group_right">
+                                <field name="active" readonly="1" />
+                                </group> 
+                            <field name="is_done" />
+                            -->
+						</group> 
 					</group>
-				</sheet>
+				</sheet> 
 			</form>
 			</field>
 		</record>
@@ -46,6 +47,7 @@
 			<field name="model">elearning.stage</field>
 			<field name="arch" type="xml">
 			<search string="Estados">
+				<field name="name"></field>
 				<field name="description"></field>
 				<filter name="filter_stage" domain="[('elearning_stage','=', 'True')]"/>
 			</search>
