--- a/elearning_stages/views/stage_view.xml
+++ b/elearning_stages/views/stage_view.xml
@@ -2,56 +2,59 @@
 <odoo>
 	<data>
         <!-- VISTA TREE -->
-		<record model='ir.ui.view' id='elearning_stage_tree'>
-			<field name='name'>elearning.stage.tree</field>
-			<field name='model'>elearning.stage</field>
-			<field name='type'>tree</field>
-			<field name='arch' type='xml'>
-				<tree>
-					<field name="name" />
-					<field name="description" />
-					<!--<field name="is_done" />
-					<field name="active" />-->
-				</tree>
-			</field>
-		</record>
+        <record model='ir.ui.view' id='elearning_stage_tree'>
+            <field name='name'>elearning.stage.tree</field>
+            <field name='model'>elearning.stage</field>
+            <field name='type'>tree</field>
+            <field name='arch' type='xml'>
+            <tree>
+                <field name="name" />
+                <field name="description" />
+                <!--<field name="is_done" />
+                <field name="active" />-->
+            </tree>
+            </field>
+        </record>
 
-		<!--VISTA FORM  -->
-		<record id="view_form_elearning_stage" model="ir.ui.view">
-			<field name="name">elearning.stage.form</field>
-			<field name="model">elearning.stage</field>
-			<field name="arch" type="xml">
-			<form>
-				 <sheet>
-					<group name="group_top">
-						<group name="group_left">
-							<field name="name" required="True" />
-							<field name="description" />											
+        <!--VISTA FORM  -->
+        <record id="view_form_elearning_stage" model="ir.ui.view">
+            <field name="name">elearning.stage.form</field>
+            <field name="model">elearning.stage</field>
+            <field name="arch" type="xml">
+            <form>
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,done,cancel"/>
+                </header>
+                <sheet>
+                    <group name="group_top">
+                        <group name="group_left">
+                            <field name="name" required="True" />
+                            <field name="description" />											
                             <!-- 
                             <field name="stage" widget="statusbar" />   
                             <group name="group_right">
-                                <field name="active" readonly="1" />
-                                </group> 
+                            <field name="active" readonly="1" />
+                            </group> 
                             <field name="is_done" />
                             -->
-						</group> 
-					</group>
-				</sheet> 
-			</form>
-			</field>
-		</record>
+                        </group> 
+                    </group>
+                </sheet> 
+            </form>
+            </field>
+        </record>
 
-		<!-- BUSCADOR -->
-		<record id="view_filter_elearning_stage" model="ir.ui.view">
-			<field name="name">Elearning Stage Filter</field>
-			<field name="model">elearning.stage</field>
-			<field name="arch" type="xml">
-			<search string="Estados">
-				<field name="name"></field>
-				<field name="description"></field>
-				<filter name="filter_stage" domain="[('elearning_stage','=', 'True')]"/>
-			</search>
-			</field>
-		</record>
-	</data>
+        <!-- BUSCADOR -->
+        <record id="view_filter_elearning_stage" model="ir.ui.view">
+            <field name="name">Elearning Stage Filter</field>
+            <field name="model">elearning.stage</field>
+            <field name="arch" type="xml">
+            <search string="Estados">
+                <field name="name"></field>
+                <field name="description"></field>
+                <filter name="filter_stage" domain="[('elearning_stage','=', 'True')]"/>
+            </search>
+            </field>
+        </record>
+        </data>
 </odoo>
